// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should render with all props 1`] = `
<ThemeProvider
  className="application-theme-provider"
  isGlobalTheme={true}
  themeName="test-theme"
>
  <Base
    customMessages={
      Object {
        "custom": "messages",
      }
    }
    locale="en"
    strictMode={false}
    translationsLoadingPlaceholder={
      <div>
        placeholder
      </div>
    }
  >
    <ActiveBreakpointProvider>
      <ApplicationErrorBoundary>
        <withPromptRegistration(NavigationPromptCheckpoint)
          onPromptChange={[Function]}
        >
          <ApplicationLoadingOverlayProvider>
            <div>
              content
            </div>
          </ApplicationLoadingOverlayProvider>
        </withPromptRegistration(NavigationPromptCheckpoint)>
      </ApplicationErrorBoundary>
    </ActiveBreakpointProvider>
  </Base>
</ThemeProvider>
`;

exports[`Application should render with minimal props 1`] = `
<ThemeProvider
  className="application-theme-provider fill"
  isGlobalTheme={false}
>
  <Base
    customMessages={Object {}}
    locale="en"
    strictMode={false}
  >
    <ActiveBreakpointProvider>
      <ApplicationErrorBoundary>
        <withPromptRegistration(NavigationPromptCheckpoint)
          onPromptChange={[Function]}
        >
          <ApplicationLoadingOverlayProvider>
            <div>
              content
            </div>
          </ApplicationLoadingOverlayProvider>
        </withPromptRegistration(NavigationPromptCheckpoint)>
      </ApplicationErrorBoundary>
    </ActiveBreakpointProvider>
  </Base>
</ThemeProvider>
`;
